# pcvisualizer

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/engine/: camera.rs  geometry.rs  gui.rs  mod.rs  pointcloud.rs  texture.rs
src/engine/shaders/: pointcloud.wgsl
