[package]
name = "pcvisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
env_logger = "0.11"
pcd-rs = { version = "0.11", features = ["derive"] }
pollster = "0.3"
wgpu = "22.1"
winit = "0.30"